# https://pyscaffold.org/en/stable/usage.html

[metadata]
name = skit
description = Module for the ML.
author = Yannick Stephan
author_email = stephan.yannick@me.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YanSteph
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires >=3.7

# Add here dependencies of your project (semicolon/line-separated)
install_requires =
  matplotlib
  numpy
  pandas
  ipython
  scikit-learn
  pyyaml
  nbformat
  nbconvert
  requests
  typing_extensions
  h5py

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
* =
  *.svg
  *.png
  *.css
  *.mplstyles
  *.html
  *.txt

[options.entry_points]
console_scripts =
       skit = skit.main:run

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = skit
